--- a/instructor/index.html
+++ b/instructor/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/instructor.css">
     <script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
     <script src="../js/gnb.js"></script>
 
@@ -34,17 +33,52 @@
         </div>
     </header>
     <main>
-        <img class="mainImg" src="../images/contact.png" alt="">
-        <h2>Contact</h2>
-        <form action="">
-            <fieldset class="contact-form">
-                <legend></legend>
-                <label for="">Writer</label><span class="text-box"><input type="text"></span>
-                <label for="">Title</label><span class="text-box"><input type="text"></span>
-                <label for="">Description</label><span class="text-box"><textarea class="text-area" name="" id="" cols="30" rows="10"></textarea></span>
-                <button>Submit</button>
-            </fieldset>
-        </form>
+        <h2>Instructor</h2>
+        <div class="instructor-list lebron">
+            <div class="instructor-desc">
+            <ul>
+                <li>Lebron James</li>
+                <li>weight</li>
+            </ul>
+            <p>Go course ></p>
+            </div>
+        </div>
+        <div class="instructor-list curry">
+            <div class="instructor-desc">
+            <ul>
+                <li>Stephen Curry</li>
+                <li>shooting & dribble</li>
+            </ul>
+            <p>Go course ></p>
+            </div>
+        </div>
+        <div class="instructor-list durant">
+            <div class="instructor-desc">
+            <ul>
+                <li>Kevin Durant</li>
+                <li>offense</li>
+            </ul>
+            <p>Go course ></p>
+            </div>
+        </div>
+        <div class="instructor-list luka">
+            <div class="instructor-desc">
+            <ul>
+                <li>Luka Doncic</li>
+                <li>clutch</li>
+            </ul>
+            <p>Go course ></p>
+            </div>
+        </div>
+        <div class="instructor-list kim">
+            <div class="instructor-desc">
+            <ul>
+                <li>TaeHyung Kim</li>
+                <li>master instructor</li>
+            </ul>
+            <p>Go course ></p>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="box">
